[gd_scene load_steps=5 format=3 uid="uid://bfyw8v2qrrnth"]

[ext_resource type="Script" path="res://Fases/scripts/fase.gd" id="1_t8r38"]
[ext_resource type="PackedScene" uid="uid://d0iy8gvd40fsb" path="res://Fases/cenas/menu_roupas.tscn" id="2_quwhy"]
[ext_resource type="PackedScene" uid="uid://b3lbcwsw0uigv" path="res://Player/Cenas/corpo_1.tscn" id="3_pwu40"]
[ext_resource type="PackedScene" uid="uid://bdlh576kwk7e6" path="res://Player/Cenas/corpo_2.tscn" id="4_nayba"]

[node name="Fase" type="Node2D"]
script = ExtResource("1_t8r38")
retorno = "res://tela_inicio.tscn"
nome_tl_inicio = "Intro_Fase_1"
nome_tl_fim = "Fim_Fase_1"

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 840.0
offset_bottom = 1080.0
color = Color(0.515367, 0.779628, 0.78915, 1)

[node name="Menu_Roupas" parent="." instance=ExtResource("2_quwhy")]
position = Vector2(839, 0)

[node name="Corpo_1" parent="." instance=ExtResource("3_pwu40")]
visible = false
position = Vector2(395, 661)

[node name="Corpo_2" parent="." instance=ExtResource("4_nayba")]
position = Vector2(396, 664)

[node name="Enviar_resultado" type="Button" parent="."]
custom_minimum_size = Vector2(280, 120)
offset_left = 536.0
offset_top = 937.0
offset_right = 816.0
offset_bottom = 1057.0
theme_override_font_sizes/font_size = 50
text = "Terminei!!"

[connection signal="valor_atualizado" from="Menu_Roupas" to="." method="_on_menu_roupas_valor_atualizado"]
[connection signal="pressed" from="Enviar_resultado" to="." method="sistema_avaliacao_roupas"]
